--- a/index.html
+++ b/index.html
@@ -1,9 +1,34 @@
+<!--
+  Clarity - A Text-Based Polyphonic Synthesizer
+
+  Clarity is an innovative browser-based synthesizer that allows musicians and sound designers to
+  create and manipulate audio using a text-driven interface. Rather than clicking through traditional
+  knobs and sliders, users define their instrument by editing a structured text document that
+  dynamically generates the user interface.
+
+  The application features a split-pane design: the left pane contains a custom block-based text
+  editor with syntax highlighting, while the right pane displays dynamically generated controls that
+  update in real-time as you type. Users can create multiple oscillators with customizable parameters
+  including waveform type (sine, square, sawtooth, triangle), octave offset, and volume. Each
+  oscillator supports individual ADSR envelope controls for attack time, sustain level, and release time.
+
+  Built on the Web Audio API, Clarity provides true polyphonic playback with a sophisticated
+  polyphony manager that tracks multiple simultaneous notes. The synthesizer includes a master
+  compressor with adjustable threshold, ratio, knee, attack, and release parameters to prevent
+  clipping and shape the overall sound. Input methods include MIDI controller support and a virtual
+  keyboard mapped to your computer keyboard. The interface features keyboard shortcuts for
+  incrementing/decrementing values, adjusting text size and line spacing, and a command palette
+  accessible via slash commands for quick actions.
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Clarity</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,30 +36,16 @@
     <!-- Left Pane: Text Editor -->
     <div class="left-pane">
       <div class="pane-header">clarity.instrument</div>
-      <div id="parameters" contenteditable="true">
-    Oscillator 1 Wave: sine
-    Oscillator 1 Octave: 0
-    Oscillator 1 Volume: 0.5
-    Oscillator 2 Wave: sine
-    Oscillator 2 Octave: 1
-    Oscillator 2 Volume: 0.3
-    Oscillator 3 Wave: sine
-    Oscillator 3 Octave: -1
-    Oscillator 3 Volume: 0.2
-    Attack Time: 100
-    Sustain Level: 0.5
-    Release Time: 500
-    Master Volume: 0.8
-    Compressor Threshold: -20
-    Compressor Ratio: 12
-    Compressor Knee: 30
-    Compressor Attack: 0.003
-    Compressor Release: 0.25</div>
+      <div id="parameters"></div>
     </div>
 
     <!-- Right Pane: Controls -->
     <div class="right-pane">
-      <div class="controls-section" id="osc1-section">
+      <!-- Dynamic oscillator sections generated from text -->
+      <div id="oscillators-container"></div>
+
+      <!-- Hidden template sections (kept for backwards compatibility but not used) -->
+      <div class="controls-section hidden" id="osc1-section">
         <h2>Oscillator 1</h2>
 
         <div class="slider-container">
@@ -54,11 +65,11 @@
 
         <div class="slider-container">
           <label for="osc1-volume">Volume</label>
-          <input type="range" id="osc1-volume" min="0" max="1" step="0.01" value="0.5">
+          <input type="range" id="osc1-volume" min="0" max="100" step="1" value="50">
         </div>
       </div>
 
-      <div class="controls-section" id="osc2-section">
+      <div class="controls-section hidden" id="osc2-section">
         <h2>Oscillator 2</h2>
 
         <div class="slider-container">
@@ -78,11 +89,11 @@
 
         <div class="slider-container">
           <label for="osc2-volume">Volume</label>
-          <input type="range" id="osc2-volume" min="0" max="1" step="0.01" value="0.3">
+          <input type="range" id="osc2-volume" min="0" max="100" step="1" value="30">
         </div>
       </div>
 
-      <div class="controls-section" id="osc3-section">
+      <div class="controls-section hidden" id="osc3-section">
         <h2>Oscillator 3</h2>
 
         <div class="slider-container">
@@ -102,63 +113,18 @@
 
         <div class="slider-container">
           <label for="osc3-volume">Volume</label>
-          <input type="range" id="osc3-volume" min="0" max="1" step="0.01" value="0.2">
+          <input type="range" id="osc3-volume" min="0" max="100" step="1" value="20">
         </div>
       </div>
 
-      <div class="controls-section">
-        <h2>Envelope</h2>
-
-        <div class="slider-container">
-          <label for="attack-slider">Attack Time (ms)</label>
-          <input type="range" id="attack-slider" min="0" max="2000" step="100" value="100">
-        </div>
-
-        <div class="slider-container">
-          <label for="sustain-slider">Sustain Level</label>
-          <input type="range" id="sustain-slider" min="0" max="1" step="0.1" value="0.5">
-        </div>
-
-        <div class="slider-container">
-          <label for="release-slider">Release Time (ms)</label>
-          <input type="range" id="release-slider" min="0" max="2000" step="100" value="500">
-        </div>
-
-        <div class="slider-container">
-          <label for="master-volume">Master Volume</label>
-          <input type="range" id="master-volume" min="0" max="1" step="0.01" value="0.8">
-        </div>
-      </div>
-
-      <div class="controls-section">
-        <h2>Compressor</h2>
-
-        <div class="slider-container">
-          <label for="compressor-threshold">Threshold (dB)</label>
-          <input type="range" id="compressor-threshold" min="-100" max="0" step="1" value="-20">
-        </div>
-
-        <div class="slider-container">
-          <label for="compressor-ratio">Ratio</label>
-          <input type="range" id="compressor-ratio" min="1" max="20" step="0.1" value="12">
-        </div>
-
-        <div class="slider-container">
-          <label for="compressor-knee">Knee</label>
-          <input type="range" id="compressor-knee" min="0" max="40" step="1" value="30">
-        </div>
-
-        <div class="slider-container">
-          <label for="compressor-attack">Attack (s)</label>
-          <input type="range" id="compressor-attack" min="0" max="1" step="0.001" value="0.003">
-        </div>
-
-        <div class="slider-container">
-          <label for="compressor-release">Release (s)</label>
-          <input type="range" id="compressor-release" min="0" max="3" step="0.01" value="0.25">
-        </div>
-      </div>
+      <!-- All UI sections are generated dynamically from the document -->
     </div>
+  </div>
+
+  <!-- Command Modal -->
+  <div id="command-modal" class="hidden">
+    <input type="text" id="command-search" placeholder="Search commands..." autocomplete="off">
+    <div id="command-list"></div>
   </div>
 
   <script src="script.js"></script>
