Beginnings of chord system

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
 
     <!-- Right Pane: Controls -->
     <div class="right-pane">
+      <!-- Note Display -->
+      <div id="note-display" class="note-display">
+        <span id="note-display-text">--</span>
+      </div>
       <!-- Dynamic oscillator sections generated from text -->
       <div id="oscillators-container"></div>
 
@@ -127,6 +131,7 @@
     <div id="command-list"></div>
   </div>
 
+  <script src="chords.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
