First LFO implementation. First note-specific implementation.

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
   </div>
 
   <script src="chords.js"></script>
+  <script src="variables.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
